# python-but-not-slow

./: .gitignore  Cargo.toml  README.md  drill.yml  pyproject.toml  requirements.txt
python/pbns/: main.py
python/python_but_not_slow/: main.py
src/: lib.rs
